More relax3d to aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -20,6 +20,11 @@
 
 \usepackage[backend=biber,language=russian,sorting=none,maxnames=10,bibstyle=gost-numeric]{biblatex}
 
+% text index in math
+\newcommand{\Tidx}[1]{%
+  _\mathrm{#1}
+}
+
 \input{tikzsetup.tex}
 \input{defs.tex}
 \renewcommand{\Rada}{\dissRada}
@@ -2431,16 +2436,120 @@ BJT транзистора, та різних режимів роботи.
 
 \textbf{У шостому розділі}
 запропоновано модель
-системи зв'язаних релаксаційних генераторів,
+системи зв'язаних релаксаційних генераторів (``relax3d''),
 які проявляють хаотичну динаміку при певних умовах.
-Досліджуються  властивості цієї системи.
+Релаксаційні генератори, прямо або побічно, набули широкого поширення в схемотехніці.
+Основними параметрами схем з релаксаційним генераторами є напруги включення
+$ V\Tidx{on} $ і виключення $ V \Tidx{off} $ переключающего елемента,
+напруга живлення $ V\Tidx{cc} $, ємність конденсатора $C$, опору ланцюгів
+зарядки $ R\Tidx{ch} $ і розрядки $ R\Tidx {dis} $.
 
-Створено фізичний об'єкт,
-який реалізовує запропоновану динаміку,
-а також
-створено мікроконтролерну систему, яка
-дозволила перевірити адекватність математичної моделі.
-Також було проведено властивостей системи ідентифікації стосовно цієї системи.
+Пропонований хаотичний генератор являє собою систему з трьох релаксаційних
+генераторів. Елемент, що перемикає, в кожному з них реалізований на парі
+компліментарних транзисторів~(рис.~\ref{atu:f:relax3d_schem}).
+Параметр, що підлягає ідентифікації, було обрано $R_b$,
+так как саме він контролює зваемодію проміж релаксаційних елементах.
+
+% системи з трьох пов'язаних релаксаційних генераторів на парі компліментарних транзисторів
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.6\textwidth]{p7/p/relax3d_schem.png} }
+  \caption{Электрична схема системи з трьох пов'язаних релаксаційних генераторів на парі компліментарних транзисторів}
+  \label{atu:f:relax3d_schem}
+\end{figure}
+
+
+Створено пару схем,
+які реалізовують запропоновану динаміку, які відрізняються
+засобом реалізації релаксаційних елементів.
+Для отримання результатів вікористано мікроконтролерну систему,
+яка буда описана у попередньому розділі.
+
+При певних значення $ R_b $ зв'язок між релаксаційним елементами стає сильнішою,
+і при цьому можлива ситуація, коли
+процес заряду одного елемента настільки уповільнює момент перемикання іншого,
+що це уповільнення впливає на всі елементи. Виникає стан ``гонки'', коли
+перший переключився елемент істотно сповільнює перемикання другого. Таким
+чином, виникає точка біфуркації, коли малі зміни в початковому стані системи
+призводять до істотною зміною в подальшій динаміці. що може призводити до
+хаотичного поведінки.
+
+При цьому спектр системи має щільні ділянки, підтверджуючи хаотичність
+поведінки (рис.~\ref{atu:f:relax3d_f_08}, a). Аттрактор ж системи
+(рис.~\ref{atu:f:relax3d_f_08}, b), навпаки, менш щільно заповнює
+доступний простір.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.40\textwidth]{p7/p/relax3d_f_08.png}
+    ~
+    \includegraphics[width=0.40\textwidth]{p7/p/relax3d_v1v2v3_08.png}
+  }
+  \caption{Спектр $V_b(t)$, та аттрактор для системи ``relax3d'' при $R_b=\SI{34.0}{\kilo\ohm}$ }
+  \label{atu:f:relax3d_f_08}
+\end{figure}
+
+Модель системи пов'язаних релаксаційних генераторів можна представити в наступному вигляді:
+%
+\begin{equation}
+  \begin{cases}
+    V_b = V_{cc} - R_b ( I_1 + I_2 + I_3 ), \\
+      C_1 \dot{V}_1 = \frac{V_b-V_1}{R_{v1}} - \frac{V_1}{R_1} \mathrm{On}_1() - I_{1,\mathrm{leak}}(V_1), \\
+      C_2 \dot{V}_2 = \frac{V_b-V_2}{R_{v2}} - \frac{V_2}{R_2} \mathrm{On}_2() - I_{2,\mathrm{leak}}(V_2), \\
+      C_3 \dot{V}_3 = \frac{V_b-V_3}{R_{v3}} - \frac{V_3}{R_3} \mathrm{On}_3() - I_{3,\mathrm{leak}}(V_3), \\
+      I_i = \frac{V_b-V_i}{R_{vi}}.
+  \end{cases}.
+    \label{atu:eq:relax3}
+\end{equation}
+%
+де:
+$R_b$ --- опір в ланцюзі харчування (ідентифікований параметр),
+$C_i$ --- ємності кожного з релаксаційних генераторів,
+$R_{vi}$ --- опори зарядки релаксаційних генераторів,
+$R_{i}$ --- опору зарядки релаксаційних генераторів,
+$I_{i,\mathrm{leak}}$ --- струми витоку.
+Функції $\mathrm{On}_i() $ визначають моменти спрацьовування переключающих
+елементів, і з огляду на їх релейно-гістерезисного виду задаються алгоритмічно.
+Визначальними параметрами при цьому є
+$V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
+
+
+Розглянуто декілька критеріїв (рис.~\ref{atu:f:relax3d_q}), та обрано критерій $q_{rv}$:
+%
+\begin{equation}
+  q_{rv} = \frac{\overline{V_1+V_2+V_3}}{\overline{V_b}}.
+  \label{atu:eq:q_rv_relax}
+\end{equation}
+
+\begin{figure}[htb!]
+  \centerline{\includegraphics[width=0.45\textwidth]{p7/p/relax3d_read_q-p_q1.png} }
+  \caption{Залежності для розглянутих критеріїв ідентифікації для системи
+  релаксаційних генераторів на парі компліментарних транзисторів.
+  Щільні лінії відповідають обїекту, інші --- моделі}
+  \label{atu:f:relax3d_q}
+\end{figure}
+
+Для системи ``relax3d'' було провелено 3 експеримента, кожен з яких полягав в отриманні даних
+($ V_b (t) $, $ V_1 (t) $, $ V_2 (t) $, $ V_3(t) $) з реального генератора, з подальшим моделюванням процесу ідентифікації в
+програмі ``qontrol''.
+Результати моделювання процесу ідентифікації в першому експерименті
+(рис.~\ref{atu:f:relax3d_id_1}) показують, що запропонована система
+ідентифікації виявилася працездатною.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.45\textwidth]{p7/p/relax3d_read_id2-p_p_00.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{p7/p/relax3d_read_id2-p_pp_00.png}
+  }
+  \caption{Процес ідентифікації системи ``relax3d'' (первый эксперимент)}
+  \label{atu:f:relax3d_id_1}
+\end{figure}
+
+Також досліджено вплив параметрів системи ідентифікації на помилки ідентифікації.
+Підтверджена можливість використання широкого спктру цих параметрів.
+
+
 
 \xsect{ВИСНОВКИ}
 
