--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -1324,7 +1324,7 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
   \label{atu:f:relax3d_id_qontrol}
 \end{figure}
 
-Для системы ``'relax3d' представлены результаты трех экспериментов,
+Для системы ``relax3d'' представлены результаты трех экспериментов,
 каждый из которых заключался в получении данных
 (отсчётов $V_b(t)$, $V_1(t)$, $V_2(t)$, $V_3(t)$) с реального генератора,
 с последующим моделированием процесса идентификации в программе ``qontrol''.
@@ -1355,7 +1355,7 @@ $p_{ge}$, $p_{le}$, $p_{ee}$.
 \end{figure}
 
 Результаты моделирования процесса идентификации в первом эксперименте~(рис.~\ref{atu:f:relax3d_id_1})
-показывают, что система предложенная система идентификации оказалась работоспособной.
+показывают, что предложенная система идентификации оказалась работоспособной.
 При этом следует отметить, что в первом эксперименте использовалась максимальная
 амплитуда изменения параметра, следовательно основной вклад вносят ``крайние'' агенты,
 наиболее подверженные влиянию границ рабочей области, тем не менее,
