--- a/defs.tex
+++ b/defs.tex
@@ -25,7 +25,7 @@
 \newcommand{\dissScopeUa}{техничних наук}
 \newcommand{\dissScopeMain}{\dissScopeRu}
 \newcommand{\dissScopeAref}{\dissScopeUa}
-\newcommand{\UDC}{УДК 004: 681.5.015}
+\newcommand{\UDC}{004: 681.5.015}
 \newcommand{\dissRada}{Д.~08.084.01}
 \newcommand{\dissSekrRadi}{Селівьорстова~Т.В.}
 \newcommand{\institutionRu}{Национальная металлургическая академия Украины}
