--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -101,55 +101,64 @@
 \thispagestyle{empty}
 
 \noindent
-Дисертацією є рукопис
+Дисертацією є рукопис.
 
-\vspace{3ex plus 2ex}
+\vspace{1ex plus 2ex}
 
 \noindent
 Робота виконана в Національній металургійній академії України
-Міністерства освіти і науки України.
+Міністерства освіти і науки України, м.~Дніпро.
 
 
-\vspace{4ex plus 4ex}
+\vspace{2ex plus 2ex}
 
 \noindent
-\begin{tabular}{lp{0.64\textwidth}}
+\begin{tabular}{lp{0.70\textwidth}}
 \textbf{Науковий консультант:}
 &
 доктор технічних наук, професор,\newline
 \textbf{Михальов Олександр Ілліч,}\newline
-Національна металургійна академія України,
-завідувач кафедри інформаційних технологій і систем.
+Національна металургійна академія України, \newline
+завідувач кафедри інформаційних технологій \newline
+і систем, м.~Дніпро.
 \\
 {~} & {~}
 \\
 \textbf{Офіційні опоненти:}
 {~}
-&
-доктор технічних наук, професор,\newline
-%доктор фіз.-мат. наук, професор,\newline
-\textbf{XXX}
-професор .
+\\
+{~} &
+доктор фіз.-мат. наук, професор,\newline
+\textbf{Білозьоров Василь Євгенович,} \newline
+Дніпропетровський національний університет \newline
+залізничного транспорту
+імені академіка В.~Лазаряна, \newline
+професор кафедри ``Комп'ютерні інформаційні \newline
+технології'', м.~Дніпро;
 \\
 {~} & {~}
 \\
-&
+{~} &
 доктор технічних наук, професор,\newline
-\textbf{XXX},
-  ---
+\textbf{Атаманюк Ігор Петрович}, \newline
+Миколаївський національний аграрний університет, \newline
+завідувач кафедри вищої та прикладної математики, м.~Миколаїв;
 \\
 {~} & {~}
 \\
-{~}
+{~} &
+доктор технічних наук, доцент,\newline
+\textbf{Щербовських Сергій Володимирович}, \newline
+Національний університет ``Львівська політехніка'' \newline
+старший науковий співробітник, доцент кафедри САПР, м.~Львів.
+\\
 &
-доктор технічних наук, професор,\newline
+% доктор технічних наук, професор,\newline
 % \textbf{Жолткевич Григорій Миколайович},
 %   декан механіко-математичного факультету,
 %   завідувач кафедри теоретичної та прикладної інформатики
 %   Харківського національного університету ім.~В.Н.~Каразіна;
 \end{tabular}
-
-\vspace{5ex plus 4ex}
 
 
 \vfill
@@ -163,17 +172,18 @@
 пр.~Гагаріна,~4.
 
 
-\vspace{4ex plus 3ex}
-З дисертацією можна ознайомитись у бібліотеці Національної металургійної
+\vspace{2ex plus 3ex}
+З дисертацією можна ознайомитись на сайті http://nmetau.edu.ua
+та в бібліотеці Національної металургійної
 академії України за адресою: 49600, м.~\cityUa, пр.~Гагаріна,~4.
 
-\vspace{4ex plus 3ex}
+\vspace{2ex plus 3ex}
 Автореферат розісланий 
 <<\_\_\_\_>>
 ~\_\_\_\_\_\_\_\_\_\_\_
 \bookyear~р.
 
-\vspace{4ex plus 3ex}
+\vspace{3ex plus 3ex}
 
 \begin{tabular}{p{0.44\textwidth}p{0.2\textwidth}p{0.35\textwidth}}
 Вчений секретар спеціалізованої вченої ради 
@@ -183,7 +193,7 @@
 \SekrRadi
 \end{tabular}
 
-\vspace{2ex}
+\vspace{1ex}
 
 \clearpage
 
@@ -364,7 +374,7 @@
    працездатністю при малих напругах та можливістю
    керування частотним діапазоном у широкому діапазоні,
    що сприяє процесу аналізу хаотичної динаміки
-   фізичного об'єкту, перевірки адекватності математичної моделі
+   фізичного об'єкту, перевірці адекватності математичної моделі
    та властивостей системи ідентифікації стосовно цієї системи.
 \end{itemize}
 
