Next spell in aref

--- a/atuworks.bib
+++ b/atuworks.bib
@@ -6,7 +6,7 @@
 @string{ kher= {Вестник Херсонского национального технического университета" (РИНЦ)} }
 
 @xdata{asau,
-  journal = {Адаптивні системи автоматичного управління. Міжвідом. науково-техн. зб.},
+  journal = {Адаптивні системи автоматичного управління. Міжвідом. науково-техн. зб. (РИНЦ)},
   location = {Днепропетровск},
 }
 
@@ -207,7 +207,7 @@
 
 @Article{atu_st85,
   title = {Chaotic system with relay hysteresis in return force: simulation and analysis},
-  xdata = {st},
+  xdata = {st_ik},
   author = atume,
   language     = {english},
   year = {2013},
@@ -376,7 +376,7 @@
 
 @Article{atu_st103,
   title = {Multi-model methods and parameters estimation approaches on non-linear dynamic system identification},
-  xdata = {st},
+  xdata = {st_ik},
   author = atume,
   language     = {english},
   year = {2016},
@@ -386,13 +386,24 @@
 
 @Article{atu_st105,
   title = {Визначення гранулометричного складу матеріалу у повітряному потоці з використанням діаграм Пуанкаре},
-  xdata = {st},
+  xdata = {st_ik},
   author = {Сухомлин, Р. О. and Михальов, А. И. and  Прядко, Н. С. and Тернова, К. В. and Гуда, А. И.},
   language     = {russian},
   langid       = {russian},
   year = {2016},
   number = {4(105)},
   pages = {18--24}
+}
+
+@Article{atu_st107,
+  title = {A low-voltage coupled relaxation generator with chaotic behavior: simulation, measurement and identification},
+  xdata = {st_ik},
+  author = {Гуда, А. И.},
+  language     = {english},
+  langid       = {english},
+  year = {2016},
+  number = {4(105)},
+  pages = {57--65}
 }
 
 @Article{atu_asau27,
@@ -419,7 +430,7 @@
 
 @Article{atu_st104a,
   title = {Особливості використання HX711 для отримання даних з тензодатчика},
-  xdata = {st},
+  xdata = {st_ik},
   author = {Зимогляд, А. Ю. and Гуда, А. И.},
   language     = {russian},
   langid       = {russian},
@@ -430,7 +441,7 @@
 
 @Article{atu_st104b,
   title = {Виявлення залежності кута повороту сервоприводу від вхідного імпульсу},
-  xdata = {st},
+  xdata = {st_ik},
   author = {Левченко, Д.О. and Гуда, А. И.},
   language     = {russian},
   langid       = {russian},
