Add more pics to Rossler, some words.

--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -126,8 +126,26 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 
 \subsection{Анализ и выбор критериев}  % {{{2
 
-Критерий
-$ z_{\max}$, $ \overline{z} $.
+Система Рёсслера отличается от уже рассмотренных систем тем,
+что соответствующая физическая (или химическая) система
+находится в условиях, в которых нет смысла использовать
+закон сохранения энергии. Концентрации реагентов,
+которые расходуются в реакции, поддерживаются на постоянном уровне
+за счёт внешних воздействий. Также считается,
+что неиспользуемые продукты реакций удаляются.
+Такие свойства дают основания предполагать,
+что стандартный набор критериев, который был применён для
+систем Лоренца и системы ``Sprott A'', не будет
+содержать подходящего критерия. Исходя из формы аттрактора,
+содержащего близкие к круговым траектории вблизи плоскости $XY$,
+добавим критерий $q_{x^2+y^2}$ к списку рассматриваемых.
+Наблюдения за изменением формы аттрактора при увеличении параметра $c$
+позволяют заметить, что, в целом, максимальная аппликата также
+растёт. Это наблюдение позволяет добавить критерий $q_{z \max{}}$
+в число рассматриваемых. Зависимости рассматриваемых критериев от $c$
+приведены на рис.~\ref{atu:f:ross_q}.
+
+
 
 \begin{figure}[ht!]
 \begin{center}
@@ -139,6 +157,18 @@ $ z_{\max}$, $ \overline{z} $.
 \label{atu:f:ross_q}
 \end{figure}
 
+Как и следовало ожидать, большая часть критериев мало пригодна
+для применения в методах идентификации. Несмотря на явные
+общие тенденции в поведении графиков, наличие нерегулярных колебаний
+не позволяют рассчитывать на приемлемую точность.
+Лучшие свойства демонстрирует критерий $q_{z \max{}}$,
+график которого содержит сравнительно длинные прямые участки.
+Однако, применение этого критерия ограничено одним таким участком,
+границы которого зависят от других параметров системы.
+
+Для примера рассмотрим зависимости критерия $q_{x^2}$
+от значений двух параметров~(рис.~\ref{atu:f:ross_q_x2_ac_bc}).
+
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_pwr-x_a_c.png}
@@ -149,32 +179,223 @@ $ z_{\max}$, $ \overline{z} $.
 \label{atu:f:ross_q_x2_ac_bc}
 \end{figure}
 
+Сложная и изрезанная структура полученных поверхностей
+свидетельствует не только о практически невозможной идентификации одновременно двух параметров,
+но и о том, что достаточно малые ошибки о определении одного из них
+приводят к существенным ошибкам идентификации другого.
+
+Зависимости $q_{z \max{}}(a,c)$ и  $q_{z \max{}}(b,c) $
+(рис.~\ref{atu:f:ross_q_zmax_ac_bc}) построенные для
+области параметров, для которой не наблюдается существенное изменение
+поведения критерия, показывает лучшие результаты. Однако,
+даже в этой области происходят резкие ``провалы'' графика.
+Такое поведение может и не привести в существенным ошибкам идентификации.
+Тем не менее, при попадании одной из моделей в область ``провала''
+процесс идентификации может быть нарушен.
+
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_zmax_a_c.png}
   \hfill
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_zmax_b_c.png}
 \end{center}
-  \caption{Зависимости $q_{zmax}(a,c)$ и  $q_{zmax}(b,c) $ для системы Рёсслера}
+  \caption{Зависимости $q_{z \max{}}(a,c)$ и  $q_{z \max{}}(b,c) $ для системы Рёсслера}
 \label{atu:f:ross_q_zmax_ac_bc}
 \end{figure}
 
+Попробуем вывести более пригодный для задачи идентификации критерий,
+исходя из вида системы~(\ref{atu:eq:rossler}).
+Непосредственно параметр $c$ входит только в последнее уравнение системы.
+Так как рассматриваются только режимы, проявляющие устойчивою по Пуассону динамику,
+то при усреднении на большом интервале времени левая часть стремится к нулю.
+В правой части есть два параметра: $c$ и $b$.
+Даже для условий усреднения нет возможности определить оба,
+но для идентификации $c$ введём следующий вид критерия:
+%
+\begin{equation}
+  q_{xzOz} =
+  \frac{ \overline{xz}}{ \overline{z}}.
+  \label{atu:eq:ross_qzxOz}
+\end{equation}
+
+При фиксированных параметрах $a$ и $b$ график $q_{xzOz}(c)$
+представляет собой близкую к линейной
+зависимость~(рис.~\ref{atu:f:ross_q}, правый график, пунктирная кривая).
+Однако, применение этого критерия приводит к определённым трудностям.
+Прежде всего, наличие дробной зависимости требует отдельного анализа
+знаменателя. Из анализа аттрактора системы известно, что $z>0 \; \forall \; t > 0$,
+то есть знаменатель в ноль не обращается. При этом вид
+зависимости $z(t)$ характеризуется резкими всплеками,
+между которыми находятся области, в которых $z \approx 0 $,
+что может привести к значительным всплескам в значении критерия.
+Однако, эта же величина $z$ входит и в числитель как множитель,
+и если метод и параметры устреднения в числителе и знаменателе
+одинаковые, то возмущения критерия будут ограниченными.
 
 
 % }}}2
 
 \subsection{Тестовая задача идентификации для системы Рёсслера}  % {{{2
 
+Для синтеза системы идентификации был выбрана группа методов ``ql3rlWvnAAW'',
+критерий $q_{xzOz}$.
+Используемые значения параметров: $a=0.25$, $b=1$, $ c \in [3, 40 ]$.
+Прежде всего, рассмотрим процесс идентификации
+в квазистационарном случае,
+при медленном изменении параметра~(\ref{atu:eq:po_t_ramp}), $p_0=10$, $U_p=20$.
+Динамика агентов и различных определений $p_\mathrm{id}$
+представлена на рис.~\ref{atu:f:ross_id_ramp}.
+
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_pi_ql3rlWvnAAW_ramp.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_p_ql3rlWvnAAW_ramp.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы Рёсслера при условии (\ref{atu:eq:po_t_ramp})}
+\label{atu:f:ross_id_ramp}
+\end{figure}
+
+Графики динамики агентов показывают, что наблюдается корректное
+``сопровождение'' агентами идентифицируемого параметра, за исключением
+небольшого начального участка, на котором усреднение критерия
+на даёт корректных результатов. Все зависимости $p_\mathrm{id}(4)$
+имеют практически неотличимую динамику, хорошее приближение идентифицируемого параметра.
+При этом наблюдаются незначительные, но резкие ``всплески'',
+вызванные аналогичным явлением для критерия.
+Хорошим признаком является тот, что не наблюдается областей,
+в которых процесс идентификации нарушается или заметно теряет точность.
+
+Рассмотрим динамку процесса идентификации
+(рис.~\ref{atu:f:ross_id_sign})
+в том случае,
+если идентифицируемый параметр претерпевает
+резкие скачки~(\ref{atu:eq:po_t_sign}), $p_0=21$, $U_p=7$, $\omega_{in}=0.01047$.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_pi_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_p_ql3rlWvnAAW_sign.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы Рёсслера при условии (\ref{atu:eq:po_t_sign})}
+\label{atu:f:ross_id_sign}
+\end{figure}
+
+Помимо общей работоспособности метода идентификации следует отметить,
+что в данном случае все рассматриваемые способы определения $p_\mathrm{id}$
+дают практически неразличимые результаты.
+
+На рис.~\ref{atu:f:ross_id_sin}
+представлены аналогичные результаты,
+но в случае более плавного изменения параметра~(\ref{atu:eq:po_t_sin}), при прочих равных.
+
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_pi_ql3rlWvnAAW_sin.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_p_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Динамика агентов и идентифицируемого значения для системы Рёсслера при условии (\ref{atu:eq:po_t_sin})}
+\label{atu:f:ross_id_sin}
+\end{figure}
+
+Принципиальных отличий не выявлено, средняя ошибка идентификации в этом
+случае ниже, что достаточно очевидно.
+
 
 % }}}2
 
 \subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Рёсслера}  % {{{2
 
+Рассмотрим влияние параметров системы идентификации.
+Для рассматриваемой системы выбор правильного значения $a_q$
+особенно важен, ввиду наличия резких импульсов в значении критерия.
+Характерных вид такой зависимости представлен на рис.~\ref{atu:f:ross_q_t}.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_q_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_t_q_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Характерных вид зависимостей $q_{xzOz}(t)$ для системы Рёсслера}
+\label{atu:f:ross_q_t}
+\end{figure}
+
+Несмотря на наличие таких импульсов,
+общий вид зависимости ошибки идентификации
+остаётся неизменным~(рис.~\ref{atu:f:ross_e_a_q}).
+Так как большинство методов определения $p_\mathrm{id}$
+дают близкие результаты, на на этом и последующих графиках
+ограничимся пятью.
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_a_q_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_a_q_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(a_q)$ для системы Рёсслера}
+\label{atu:f:ross_e_a_q}
+\end{figure}
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_q_gamma_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_q_gamma_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(q_\gamma)$ для системы Рёсслера}
+\label{atu:f:ross_e_q_gamma}
+\end{figure}
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_v_f_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_v_f_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(v_f)$ для системы Рёсслера}
+\label{atu:f:ross_e_v_f}
+\end{figure}
+
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_e_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_e_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(k_e)$ для системы Рёсслера}
+\label{atu:f:ross_e_k_e}
+\end{figure}
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_nl_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_nl_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(k_{nl})$ для системы Рёсслера}
+\label{atu:f:ross_e_k_nl}
+\end{figure}
+
+\begin{figure}[ht!]
+\begin{center}
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_cl_ql3rlWvnAAW_sign.png}
+  \hfill
+  \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_cl_ql3rlWvnAAW_sin.png}
+\end{center}
+  \caption{Зависимости $\bar{e}(k_{cl})$ для системы Рёсслера}
+\label{atu:f:ross_e_k_cl}
+\end{figure}
+
+
 % }}}2
 
-\subsection{Зависимости значений критериев идентификации при изменении двух параметров системы Рёсслера}  % {{{2
-
-% }}}2
 
 
 
