More words about Rossler id: param deps

--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -330,7 +330,11 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 остаётся неизменным~(рис.~\ref{atu:f:ross_e_a_q}).
 Так как большинство методов определения $p_\mathrm{id}$
 дают близкие результаты, на на этом и последующих графиках
-ограничимся пятью.
+ограничимся пятью. Рост ошибки идентификации при $a_q \to 0$
+обусловлен тем, что избыточные фильтрующие свойства критерия
+не позволяют не только отреагировать, но и заметить изменение динамики системы.
+Рост в правой части графика, как и в предыдущих тестовых задачах,
+обусловлен недостаточным временем усреднения критерия.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -342,6 +346,15 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 \label{atu:f:ross_e_a_q}
 \end{figure}
 
+Следующий параметр, влияющий на свойства системы идентификации --- $q_\gamma$.
+Для семейства методов ``ql3rlWvnAAW'' он применяется дважды.
+Первый раз, в составе значения $W$, он определяет
+динамику одного агента. Второй раз --- задаёт уровень влияния агента
+на уровне координатора. В отличие от методов ``Fq\ldots''
+этот параметр не участвует при определении агентом величины $p_e$.
+Полученные зависимости $\bar{e}(q_\gamma)$
+представлены на рис.~\ref{atu:f:ross_e_q_gamma}.
+
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_q_gamma_ql3rlWvnAAW_sign.png}
@@ -351,6 +364,31 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
   \caption{Зависимости $\bar{e}(q_\gamma)$ для системы Рёсслера}
 \label{atu:f:ross_e_q_gamma}
 \end{figure}
+
+Оба графика демонстрируют увеличение ошибки идентификации при избыточной чувствительности,
+т.е. при $q_\gamma \to 0 $.
+Однако в дальнейшем поведение графиков различаются. Если
+параметр изменяется резко, что ошибки идентификации, связанные с
+недостаточной чувствительностью, становятся малыми, по сравнению с ошибками,
+обусловленными
+ограниченной скоростью изменения критерия, и зависимость от $q_\gamma$
+практически отсутствует. При менее ярко выраженной динамке изменения параметра,
+появляется как увеличение ошибки из-за недостаточной чувствительности,
+так и различие между применяемыми поисковыми координаторами методов.
+В первую очередь растёт ошибка идентификации у методов, использующих $p_c$,
+во вторую --- у методов, использующих ``глобальные'' оценки.
+Но в целом, если исключить область избыточной чувствительности,
+влияние этого параметра незначительно, что обусловлено
+адаптационными свойствами метода.
+Метод ql3rlWvnleW менее других теряет точность при росте чувствительности.
+
+Влияние параметра $v_f$ для методов, использующих ансамбль агентов,
+прежде всего обуславливает динамику точной настройки параметра,
+а не скорость реакции на резкие изменения параметра.
+Поэтому правый график соответствующих зависимостей
+(рис.~\ref{atu:f:ross_e_v_f}), показывает
+более значительное влияние этого параметра.
+
 
 \begin{figure}[ht!]
 \begin{center}
@@ -363,6 +401,17 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 \end{figure}
 
 
+Левый график свидетельствует о том, что при скачкообразном изменении параметра
+оправданной становится большая скорость перемещения агентов,
+несмотря на уменьшение точности из-за избыточного рысканья агентов.
+Следует отметить, что в данном примере перемещение агентов ограничено.
+Без этого ограничения при росте $v_f$ наблюдается нарушение устойчивости поиска.
+
+Влияние коэффициента $k_e$ (рис.~\ref{atu:f:ross_e_k_e})
+в какой-то мере схоже с влиянием коэффициента $v_f$.
+Отличие заключается в том, что $k_e$ влияет не только на скорость перемещения агентов,
+но на их равновесную конфигурацию.
+
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_e_ql3rlWvnAAW_sign.png}
@@ -372,6 +421,14 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
   \caption{Зависимости $\bar{e}(k_e)$ для системы Рёсслера}
 \label{atu:f:ross_e_k_e}
 \end{figure}
+
+Как и для предыдущего параметра, влияние этого коэффициента
+более значительно при плавном изменении параметра.
+И опять же, без искусственного ограничения подвижности агентов
+высокие величины $k_e$ приводят к потере устойчивости поиска.
+
+Влияние параметра $k_{nl}$ (рис.~\ref{atu:f:ross_e_k_nl})
+отображает свойства множества агентов как ансамбля.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -383,6 +440,16 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 \label{atu:f:ross_e_k_nl}
 \end{figure}
 
+Малые значения величины $k_{nl}$ приводят к тому, что движение
+агентов становится практически независимым, при этом конфигурация
+агентов вблизи искомого значения далека от оптимальной.
+И наоборот, увеличение $k_{nl}$ превращает ансамбль в сетку,
+с неизбежным ростом ошибки идентификации.
+
+Наличие искусственных ограничений на перемещения агентов
+приводит к тому, что влияние коэффициента $k_{cl}$
+становится минимальным (рис.~\ref{atu:f:ross_e_k_cl}).
+
 \begin{figure}[ht!]
 \begin{center}
   \includegraphics[width=0.49\textwidth]{p/cha/ross/ross_id-p_k_cl_ql3rlWvnAAW_sign.png}
@@ -393,6 +460,12 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 \label{atu:f:ross_e_k_cl}
 \end{figure}
 
+Более того, при плавном изменении параметра его введение только ухудшает
+качество идентификации, создавая дополнительную неравномерность в распределении
+агентов. При скачкообразном изменении идентифицируемого параметра
+несущественное улучшение связано с увеличением расстояния между агентами,
+и более быстрой реакцией на скачок.
+
 
 % }}}2
 
@@ -401,11 +474,36 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 
 \subsection{Выводы}  % {{{2
 
-Выводы
+Результаты моделирования
+процессов идентификации параметра ``$c$''
+системы Рёсслера,
+позволяют в сделать следующие выводы:
+
+\begin{itemize}
+
+  \item
+    Стандартный набор критериев имеет для этой системы
+    весьма ограниченное применение.
+
+  \item
+    Использование критерия $q_{xzOz}$
+    позволяет построить работоспособную систему идентификации.
+
+  \item
+    Группа методов ql3rlWvnAAW показала свою хорошую работоспособность,
+    а скорость идентификации при этом в первую очередь определяется
+    динамикой критерия.
+
+  \item
+    Параметры самой системы идентификации могут изменяться в достаточно широких
+    пределах без существенного увеличения ошибки идентификации.
+
+\end{itemize}
+
 
 % }}}2
 
 
 % }}}1
 
-% vim: fdm=marker foldlevelstart=3 fdc=4 ft=tex
+% vim: fdm=marker foldlevel=1 foldignore="%#" fdc=4 ft=tex
