Intro words for Rossler.

--- a/p5/ross_testsys.tex
+++ b/p5/ross_testsys.tex
@@ -10,7 +10,13 @@
 
 \subsection{Определение системы и анализ её динамики} %  % {{{2 _ross_task
 
-In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn}
+% TODO original Rossler
+Динамическая система Рёсслера~(\ref{atu:eq:rossler})
+является в кокой-то мере абстрактной моделью,
+описывающей кинетику колебательных и хаотических химических процессов
+~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chulichkcov_mm_ml_dyn},
+таких как реакция Белоусова-Жаботинского, кристаллизации фосфита свинца и других реакций.
+
 
 \begin{equation}
 \begin{cases}
@@ -84,6 +90,7 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 \label{atu:f:ross_attractor_0588}
 \end{figure}
 
+
 Прослеживается отличие спектра системы Рёсслера в хаотическом режиме
 от аналогичных условий для систем Лоренца. Отличие заключается в том, что
 существует ярко выраженный пик, соответствующий базовой частоте,
@@ -113,6 +120,11 @@ In~\cite{neimark_stoch_chaos_vibro,koltsova_nl_dyn_chem,berje_order_in_chaos,chu
 размер области, в которую вписан аттрактор.
 В этом смысле система Рёсслера потенциально является более сложной
 для идентификации, чем системы Лоренца и ``Sprott A''.
+
+Участки хаотической динамики перемежаются с участками сложно-периодических
+колебаний. При этом происходит изменение структуры аттрактора.
+Более того, при одном и том же типе динамики может изменяться как структура аттрактора,
+так и размер области, в которую он может быть вписан.
 
 % Идентифицируемый параметр:
 % $ c \in [2; 50] $, $c_0=5.88$.
